Detail title overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -547,3 +547,8 @@ footer .selected {
     flex-direction: column;
     margin-top: -80px;
 }
+
+.interaction-section {
+    display: flex;
+    gap: 10px;
+}
